--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationdeployments.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applicationdeployments.yaml
@@ -39,6 +39,9 @@ spec:
               items:
                 type: string
               type: array
+            revertOnDelete:
+              description: RevertOnDelete revert the rollout when the rollout CR is deleted, default is false It will remove the target application from the kubernetes
+              type: boolean
             rolloutPlan:
               description: RolloutPlan is the details on how to rollout the resources
               properties:
@@ -101,6 +104,9 @@ spec:
                   description: The number of batches, default = 1 mutually exclusive to RolloutBatches
                   format: int32
                   type: integer
+                paused:
+                  description: Paused the rollout, default is false
+                  type: boolean
                 rolloutBatches:
                   description: The exact distribution among batches. mutually exclusive to NumBatches
                   items:
@@ -239,9 +245,6 @@ spec:
                     - url
                     type: object
                   type: array
-                stopped:
-                  description: Stopped the rollout, default is false
-                  type: boolean
                 targetSize:
                   description: The size of the target resource. The default is the same as the size of the source resource.
                   format: int32
