--- a/charts/vela-core/crds/core.oam.dev_applicationdeployments.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applicationdeployments.yaml
@@ -251,14 +251,13 @@ spec:
                     type: integer
                 type: object
               sourceApplicationName:
-                description: SourceApplicationName contains the name of the application that we need to upgrade from.
+                description: SourceApplicationName contains the name of the application that we need to upgrade from. it can be omitted only when it's the first time to deploy the application
                 type: string
               targetApplicationName:
                 description: TargetApplicationName contains the name of the application that we need to upgrade to. We assume that an application is immutable, thus the name alone is suffice
                 type: string
             required:
             - rolloutPlan
-            - sourceApplicationName
             - targetApplicationName
             type: object
           status:
