add more traits

--- a/docs/examples/advanced-cue/initcontainer.yaml
+++ b/docs/examples/advanced-cue/initcontainer.yaml
@@ -34,7 +34,7 @@ spec:
       		// +patchKey=name
       		volumes: [{
       			name:     parameter.mountName
-      			emptyDir: "{}"
+      			emptyDir: {}
       		}]
       	}
       }
