--- a/docs/examples/advanced-cue/testapp.yaml
+++ b/docs/examples/advanced-cue/testapp.yaml
@@ -12,16 +12,12 @@ spec:
           - server.js
         image: oamdev/testapp:v1
         port: 8080
+        env:
+          - name: abc
+            value: abc1
       traits:
-        - name: "init-container"
+        - name: "podenv"
           properties:
-            name:  "install-container"
-            image: "busybox"
-            command:
-            - wget
-            - "-O"
-            - "/work-dir/index.html"
-            - http://info.cern.ch
-            mountName: "workdir"
-            appMountPath:  "/usr/share/nginx/html"
-            initMountPath: "/work-dir"
+            env:
+              xyz: "haha1"
+              nihao: "haha2"
