--- a/docs/examples/advanced-cue/dynamic-sa.yaml
+++ b/docs/examples/advanced-cue/dynamic-sa.yaml
@@ -3,7 +3,7 @@ kind: TraitDefinition
 metadata:
   annotations:
     definition.oam.dev/description: "dynamically specify service account"
-  name: serviceacc
+  name: service-account
 spec:
   appliesToWorkloads:
     - webservice
