--- a/docs/examples/advanced-cue/for-loop.yaml
+++ b/docs/examples/advanced-cue/for-loop.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
-  name: my-svc
+  name: expose
 spec:
   extension:
     template: |
