--- a/charts/vela-core/crds/standard.oam.dev_routes.yaml
+++ b/charts/vela-core/crds/standard.oam.dev_routes.yaml
@@ -40,6 +40,9 @@ spec:
               provider:
                 description: Provider indicate which ingress controller implementation the route trait will use, by default it's nginx-ingress
                 type: string
+              ingressClass:
+                description: IngressClass indicate which ingress class the route trait will use, by default it's nginx
+                type: string
               rules:
                 description: Rules contain multiple rules of route
                 items:
