fix quick start guide as we don't have route trait installed as default

--- a/docs/examples/vela.yaml
+++ b/docs/examples/vela.yaml
@@ -4,5 +4,7 @@ services:
     type: webservice
     image: crccheck/hello-world
     port: 8000
-    route:
+    ingress:
       domain: testsvc.example.com
+      http:
+        "/": 8000
