--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-installCertManager: true
+installCertManager: false
 useWebhook: true
 # By default, don't disable any builtin capabilities
 disableCaps: ""
