--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -130,14 +130,8 @@ jobs:
           key: ${{ runner.os }}-pkg-${{ hashFiles('**/go.sum') }}
           restore-keys: ${{ runner.os }}-pkg-
 
-      # This action uses its own setup-go, which always seems to use the latest
-      # stable version of Go. We could run 'make lint' to ensure our desired Go
-      # version, but we prefer this action because it leaves 'annotations' (i.e.
-      # it comments on PRs to point out linter violations).
-      - name: Lint
-        uses: golangci/golangci-lint-action@v2
-        with:
-          version: ${{ env.GOLANGCI_VERSION }}
+      - run: go get honnef.co/go/tools/cmd/staticcheck
+      - run: $(go env GOPATH)/bin/staticcheck ./...
 
   check-diff:
     runs-on: ubuntu-20.04
