--- a/docs/examples/registry/route.yaml
+++ b/docs/examples/registry/route.yaml
@@ -35,7 +35,8 @@ spec:
       			rules: parameter.rules
       		}
       
-      		provider: *"nginx" | parameter.provider
+      		provider:     *"nginx" | parameter.provider
+      		ingressClass: *"nginx" | parameter.ingressClass
       	}
       }
       parameter: {
@@ -47,6 +48,7 @@ spec:
       		path:          string
       		rewriteTarget: *"" | string
       	}]
-      	provider?: string
+      	provider?:     string
+      	ingressClass?: string
       }
       
