--- a/hack/artifacthub/artifacthub-repo.yml
+++ b/hack/artifacthub/artifacthub-repo.yml
@@ -17,3 +17,5 @@ owners:
     email: jianbo.sjb@alibaba-inc.com
   - name: Zheng Xi Zhou
     email: zzxwill@gmail.com
+  - name: Ryan Zhang
+    email: yangzhangrice@hotmail.com 
