--- a/hack/artifacthub/artifacthub-repo.yml
+++ b/hack/artifacthub/artifacthub-repo.yml
@@ -14,7 +14,7 @@ owners:
   - name: Lei Zhang (Harry)
     email: resouer@gmail.com
   - name: Jianbo Sun
-    email: jianbo.sjb@alibaba-inc.com
+    email: wonderflow.sun@gmail.com
   - name: Zheng Xi Zhou
     email: zzxwill@gmail.com
   - name: Ryan Zhang
