add more owners

--- a/hack/artifacthub/artifacthub-repo.yml
+++ b/hack/artifacthub/artifacthub-repo.yml
@@ -15,7 +15,9 @@ owners:
     email: resouer@gmail.com
   - name: Jianbo Sun
     email: wonderflow.sun@gmail.com
+  - name: Ryan Zhang
+    email: yangzhangrice@hotmail.com
+  - name: Hongchao Deng
+    email: hongchaodeng1@gmail.com
   - name: Zheng Xi Zhou
     email: zzxwill@gmail.com
-  - name: Ryan Zhang
-    email: yangzhangrice@hotmail.com 
