--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -12,6 +12,7 @@ env:
   ENDPOINT: oss-cn-hangzhou.aliyuncs.com
   ACCESS_KEY: ${{ secrets.OSS_ACCESS_KEY }}
   ACCESS_KEY_SECRET: ${{ secrets.OSS_ACCESS_KEY_SECRET }}
+  ARTIFACT_HUB_REPOSITORY_ID: ${{ secrets.ARTIFACT_HUB_REPOSITORY_ID }}
 
 jobs:
   publish-images:
@@ -95,6 +96,11 @@ jobs:
         run: ./ossutil --config-file .ossutilconfig config -i ${ACCESS_KEY} -k ${ACCESS_KEY_SECRET} -e ${ENDPOINT} -c .ossutilconfig
       - name: sync cloud to local
         run: ./ossutil --config-file .ossutilconfig sync oss://kubevelacharts/core .oss/
+      - name: add artifacthub stuff to the repo
+        run: |
+          rsync docs/en/install.md charts/vela-core/README.md
+          sed -i '' "s/ARTIFACT_HUB_REPOSITORY_ID/$ARTIFACT_HUB_REPOSITORY_ID/g" hack/artifacthub/artifacthub-repo.yml
+          rsync hack/artifacthub/artifacthub-repo.yml ./oss
       - name: Package helm charts
         run: |
           helm package charts/vela-core --destination .oss/
