--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -112,7 +112,7 @@ jobs:
           rsync docs/en/install.md $LEGACY_HELM_CHART/README.md
           sed -i "s/ARTIFACT_HUB_REPOSITORY_ID/$ARTIFACT_HUB_REPOSITORY_ID/g" hack/artifacthub/artifacthub-repo.yml
           ls -lat ./oss/
-          cp hack/artifacthub/artifacthub-repo.yml ./oss
+          cp hack/artifacthub/artifacthub-repo.yml ./oss/
           ls -lat ./oss/
       - name: Package helm charts
         run: |
