--- a/charts/vela-core/Chart.yaml
+++ b/charts/vela-core/Chart.yaml
@@ -19,3 +19,9 @@ version: 0.1.0
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
 appVersion: 0.1.0
+
+dependencies:
+  - name: certmanager
+    version: "v1.1.*"
+    repository: "https://charts.jetstack.io"
+    condition: certmanager.enabled
